Version next

Version 2013.10.31.22
* Updated translations for: es-ES, he

Version 2013.09.14.22b
* Don't use Firefox 22 JavaScript syntax in new Downloads implementation.

Version 2013.09.14.15b
* Support new Downloads.jsm API in Firefox 26+.
* Support UI changes in Firefox 26.
* Update locales for new strings.
* Updated translations for: en-US, pl, sr

Version 2013.05.14.21b
* Fix sticky extension status messages. Instead of simply hiding the status text, actually clear the saved status messages.
* Fix download button panel when the S4E download button is not present on a toolbar.
* Update locales for new strings.
* Updated translations for: el, es-ES, he, ja-JP, tr, zh-TW

Version 2013.05.12.17b
* Add option to control the download button action (Firefox default / panel / library / classic window).
* Add an option to disable the download complete animation.
* Add an option to automatically clear the download complete button highlight.
* Do not highlight the download button if the panel/library/window is already open.

Version 2013.02.16.23
* Fix potential incorrect formatting of the location bar status display after clicking on a link.
* Fix RTL locale support.
* Updated translations for: de, nb-NO, sr, sv-SE, zh-TW

Version 2013.01.16.00b
* Drop support for Firefox 16.0 and older.
* Fix protocol hiding in the toolbar and pop-up.
* Update location bar progress styling.
* Integrate with the new downloads panel.
* Integrate with the new per-window private browsing.
* Updated translations for: bg-BG, cs, da, de, dsb, el, eo, es-ES, fr, he, hsb, it-IT, ja-JP, nb-NO, nl, pt-BR, ro, zh-CN, zh-TW

Version 2012.11.11.16b
* Make compatible with Firefox 19 CSS parser changes.

Version 2012.10.13.20b
* Drop support for Firefox 9.0 and older.
* Drop preference migration from S4E 2011.03.21.22 and older.
* Detect full-screen mode and display the status/link messages in the content pop-up when appropriate.

Version 2012.07.08.17
* Updated translations for: de, hu, tr
