@@ -1,0 +1,1 @@
+Components.utils.import("resource://status4evar/Australis.jsm");
