@@ -1,4 +1,5 @@
 Version next
+* Initial Australis support.
 
 Version 2013.10.31.22
 * Updated translations for: es-ES, he
